<resources>
    <string name="app_name">TeachMe</string>
    <string name="txtLog">Log in</string>
    <string name="txtReg">Sign up</string>
    <string name="registration_reg">Create Account</string>
    <string name="Backbtn">Back</string>
    <string name="language">EN</string>
    <string name="back_btn1">Back</string>
    <string name="user_name_open">User name</string>
    <string name="password_open">Password</string>
    <string name="home">Home</string>
    <string name="myProfile">My Profile</string>
    <string name="MyLesson">My lessons</string>
    <string name="ContactUs">Contact us</string>
    <string name="Settings">Settings</string>
    <string name="SwitchTeacherStudent">Switch Teacher Student</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="family_name">Family name</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify password</string>
    <string name="email_reg">Email</string>
    <string name="registration">Create Account</string>
    <string name="account_type_reg">Account type</string>
    <string name="student_choice_reg">Student</string>
    <string name="teacher_chice_reg">Teacher</string>
    <string name="gender_reg">Gender</string>
    <string name="male_choice_reg">Male</string>
    <string name="female_choice_reg">Female</string>
    <string name="decline_to_specify_chice_reg">Rather not to say</string>
    <string name="reviews">reviews</string>
    <string name="sort_by">Sort by:</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello">Hello</string>
    <string name="Logout">Logout</string>
    <string name="sort_by_rate">Rate</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_name">Name</string>
    <string name="informtion_mor_info">More Information</string>
    <string name="study_profession_more_info">Study profession</string>
    <string name="price_more_info">Price</string>
    <string name="phone_number_more_info">Phone Number</string>
    <string name="age_more_info">Age</string>
    <string name="update_more_info">Update</string>
    <string name="skip_more_info">Skip</string>
    <string name="about_me_more_info">About Me</string>
    <string name="subject_select_home">What you want to study</string>
    <string name="searchForTeacher">Search for teacher</string>
    <string name="message">Message:</string>
    <string name="subject">Subject:</string>
    <string name="to">To:</string>
    <string name="typeHere">Type here …</string>
    <string name="Notifications">Notfication</string>
    <string name="Volume">Volume</string>
    <string name="Disable_notifications">Disable notification</string>
    <string name="summary_on_notification">You will no longer receive any notifications</string>
    <string name="summary_off_notification">You will receive all notifications</string>
    <string name="Delete_account">Delete account</string>
    <string name="Delete_your_account">Delete your account</string>
    <string name="Language">Language</string>
    <string name="Change_language">Change language</string>
    <string name="General">General</string>
    <string name="About_us">About us</string>
    <string name="What_services_we_offer">What services we offer</string>
    <string name="Contact_us">Contact us</string>
    <string name="Via_email">Via email</string>
    <string name="summary_delete">Once deleted the account can not be restored</string>
    <string name="view_teacher_name">Full name</string>
    <string name="view_teacher_price">Price</string>
    <string name="view_teacher_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="my_details">My Profile</string>
    <!--<string name="about_us">About Us</string> -->
    <string name="we_are_teachme_our_goal_is_to_enable_the_determination_of_a_lesson_between_teacher_and_student_in_the_easiest_and_most_convenient_way_for_this_purpose_the_best_minds_in_our_company_have_created_an_accessible_app_that_allows_determining_a_lesson_teacher_rating_and_even_sorting_teachers_by_price_per_hour_to_fit_your_budget">We are TeachMe! Our goal is to unable the most easy and convenient way to make a lesson appointment. For this purpose the best minds in our company have created an accessible app that allows determining a lesson, Teacher rating And even sorting teachers by price per hour to fit your budget.</string>
    <string name="teachmehelpmee_gmail_com">teachmehelpmee@gmail.com</string>
    <!--<string name="about_us">About Us</string> -->
    <string name="absolutely_not_the_service_we_provide_is_completely_free_payment_is_only_for_lesson_session_appointment">Absolutely not! The service we provide is completely free, Payment is only for lesson session appointment.</string>
    <string name="is_the_usage_of_the_application_requires_payment">Is the usage of the application requires payment?</string>
    <string name="how_can_i_contact_you">How can I contact you?</string>
    <string name="where_are_you_located">Where are you located?</string>
    <string name="hayarkon_16_street_tel_aviv_israel">hayarkon 16 street tel aviv, Israel</string>
    <!--    <string name="settings">settings</string> -->
    <string name="Date_of_the_lesson">Date of the lesson(mm/dd/yy)</string>
    <string name="Field_of_study">Field of study</string>
    <string name="Price">Price</string>
    <string name="Create_your_lesson">Create your lesson</string>
    <string name="Student_mail">Student mail</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="my_profile_name">Full name</string>
    <string name="my_profile_name_title">Full name:</string>
    <string name="my_profile_email_title">Email:</string>
    <string name="my_profile_email">Email</string>
    <string name="my_profile_subject">Study profession</string>
    <string name="my_profile_subject_title">Subject:</string>
    <string name="my_profile_phone_title">Phone-Number:</string>
    <string name="my_profile_price">Price:</string>
    <string name="my_profile_about_me_title">About Me:</string>
    <string name="my_profile_age_title">Age:</string>
    <string name="My_lessons">My lessons</string>
    <string name="subject_comment">Subject comment</string>
    <string name="review">Review</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="settingsPage">Settings</string>
    <!--Adding a ListView -->
    <string name="about_us">About Us</string>
    <string name="change_password">Change password</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="deleting_an_account_is_permanent">Deleting an account is permanent</string>
    <string name="hebrew_english">Hebrew / English</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_account">Delete account</string>
    <string name="change_language">Change language</string>
    <string name="enter_email">Enter email:</string>
    <string name="confirm">Confirm</string>
    <string name="search_view">Type the teacher\'s name here...</string>
    <string name="faild_login">Incorrect email or password</string>
    <string name="password_reset_login">Password reset sent to email</string>
    <string name="password_faield_reset_login">Failed to reset sent to email</string>
    <string name="name_dusplay_home">Error reading from firebase</string>
    <string name="subject_choose_home">You mast choose subject from the list</string>
    <string name="name_choose_reg">You must to fill the Name field</string>
    <string name="family_choose_reg">You must to fill the Family name field</string>
    <string name="email_choose_reg">You must to fill the Email field</string>
    <string name="password_choose_reg">You must to fill the Password field</string>
    <string name="password_len_choose_reg">Passwords must to be at list 6 characters</string>
    <string name="password_var_choose_reg">Password verification must match the selected password</string>
    <string name="teacher_or_student_choose_reg">You must to chose Teacher/Student</string>
    <string name="password_inval_choose_reg">You have entered an invalid email or password</string>
    <string name="gender_choose_reg">You must to choose gender type</string>
    <string name="fields_toest_more_info">You must add fields of study</string>
    <string name="age_toset_more_info">Age must be a number</string>
    <string name="phone_toset_more_info">Phone must contains only numbers</string>
    <string name="price_toset_more_info">Price must be a number</string>
    <string name="skip_toset_more_info">You have to fill fields of study to be display in the teachers list  </string>
    <string name="email_toset_cintact_us">There are no email clients installed.</string>
    <string name="date_toset_lesson">You entered an invalid date</string>
    <string name="email_toset_lesson">You must specified mail</string>
    <string name="date_less_toset_lesson">You must specified date</string>
    <string name="study_field_toset_lesson">You must specified study field</string>
    <string name="price_toset_lesson">You must specified price</string>
    <string name="student_toset_profile_view">Only student of this teacher can leave a comment</string>
    <string name="search_for_teacher">Search for teacher</string>


</resources>