<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/menu_myProfile"
        android:title="@string/myProfile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_myLesson"
        android:title="@string/MyLesson"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_contact"
        android:title="@string/ContactUs"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_setting"
        android:title="@string/Settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_switch"
        android:title="@string/SwitchTeacherStudent"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/Logout"
        app:showAsAction="never"
        />
</menu>