<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_settings_24"
        android:title="Settings">

        <CheckBoxPreference
            android:key="sync"
            android:title="@string/sync_title" />

        <CheckBoxPreference
            android:dependency="sync"
            android:key="attachment"
            android:summaryOff="@string/attachment_summary_off"
            android:summaryOn="@string/attachment_summary_on"
            android:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_message_24"
        android:title="@string/messages_header">

        <EditTextPreference
            android:key="signature"
            android:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="reply"
            android:entries="@array/reply_entries"
            android:entryValues="@array/reply_values"
            android:key="reply"
            android:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



    <PreferenceCategory
        app:icon="@drawable/ic_baseline_notifications_24"
        android:title="Notifications">

        <SeekBarPreference
            android:key="volume_notifications"
            android:title="Volume"
            app:showSeekBarValue="true"
            android:defaultValue= "50" />

        <CheckBoxPreference
            android:key="notifications"
            android:title="Disable notifications"
            android:summaryOn="You will no longer receive any notifications"
            android:summaryOff="You will receive all notifications"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_delete_24"
        android:title="Delete account">

        <Preference

            android:title="Delete your account"
            android:summary="Once deleted the account can not be restored"/>



    </PreferenceCategory>


    <PreferenceCategory
        app:icon="@drawable/ic_baseline_language_24"
        android:title="Language">

        <Preference

            android:title="Change language"/>



    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_info_24"
        android:title="General">

        <Preference

            android:title="About us"
            android:summary="What services we offer"/>

        <Preference
            android:title="Contact Us"
            android:summary="Via email"/>


    </PreferenceCategory>


</PreferenceScreen>