<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ContactUs"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_logo_small" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@color/teal_200"
        android:layout_margin="16dp"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:editable="false"
        android:hint="Email Address"
        android:text="teachmehelpmee@gmail.com"
        tools:ignore="Deprecated" />
    <!--    android:text="teachmehelpmee@gmail.com"/>  -->



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textColor="@color/teal_200"
        android:layout_margin="16dp"
        android:textSize="26sp"
        android:textStyle="bold"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/typeHere"/>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/teal_200"
        android:layout_margin="16dp"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:layout_marginHorizontal="16dp"
        android:lines="5"
        android:gravity="start"
        android:hint="@string/typeHere"/>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="26dp"
        android:onClick="onSendClick"
        android:text="@string/send"
        android:textSize="26dp" />


</LinearLayout>