<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.HomePageNext">
    <SearchView
        android:id="@+id/searchView_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp" />

    <RadioGroup
        android:id="@+id/radio_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_verify_reg">

        <RadioButton
            android:id="@+id/radio_sort_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_name" />

        <RadioButton
            android:id="@+id/radio_sort_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_price" />
        <RadioButton
            android:id="@+id/radio_sort_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_rate" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teacher_search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="vertical" />



</LinearLayout>